<resources>
    <string name="app_name">Leitura Biblica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicial</string>
    <string name="menu_coment">Comentários</string>
    <string name="menu_contribuir">Contribuir</string>
    <string name="menu_biblia">Bíblia</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_minist">Ministrações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
